--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-command = "npx next build"
+command = "npm run build"
 publish = ".next"
+
+[build.environment]
+NODE_VERSION = "18"
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
